--- a/postgres/user/static/user/Navbar.css
+++ b/postgres/user/static/user/Navbar.css
@@ -72,7 +72,7 @@ body{
     margin-left: 20px;
     margin-right: 20px;
 }
-.display-card .Title{
+.display-card #title{
     width: 100%;
     background-color: rgb(113, 112, 112);
     border-radius: 5px;
@@ -81,7 +81,7 @@ body{
     color: white;
     font-size: smaller;
 }
-.display-card .Description{
+.display-card #description{
     width: 100%;
     background-color: rgb(60, 60, 60);
     color: white;
@@ -100,14 +100,14 @@ body{
     align-items: center;
     margin-top: 2px;
 }
-.display-card .start-date{
+.display-card #start_date{
     background-color: rgb(113, 112, 112);
     border-radius: 5px;
     padding: 1px;
     text-align: center;
     color: white;
 }
-.display-card .end-date{
+.display-card #end_date{
     background-color: rgb(113, 112, 112);
     border-radius: 5px;
     padding: 1px;
@@ -135,6 +135,13 @@ body{
     bottom: 100%;
     right: 0;
 }
-.display-card .icons .icon{
-
+.display-card #save{
+    display: none;
+    position: absolute;
+    top: 102%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.display-card #save:hover{
+    cursor: pointer;
 }
